--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,9 @@ a:hover {
 
 /* Header */
 .header {
+  position: sticky;
+  top: 0;
+  z-index: 100;
   display: flex;
   justify-content: space-between;
   align-items: center;
